Auth working with bearer token, new /protocols/me endpoint returning basic infos about token bearer protocol's
